--- a/public/resume.html
+++ b/public/resume.html
@@ -83,19 +83,20 @@
 							<div class="panel-body">
 								<div class="col-sm-6">
 									<span class="fa fa-users pull-left big"></span>
-									<p class="desc">A Technology &amp; Development Manager with 15 years of planning and project management experience and a track record of leading teams into success. A driver of technology vision, with extensive experience in quality, planning, and implementing innovative solutions.
+									<p class="desc">A Software Development Manager with 16 years of mixed technology project management experience and a track record of leading teams into success. Recognized as a driver of technology vision, with extensive experience in quality, planning, and innovative solutions.
 									</p>
 								</div>
 								<div class="col-sm-6">
 									<h5><strong>COMPETENCIES</strong></h5>
 									<ul>
 										<li><span class="fa fa-compass"></span> Strategic &amp; Business Planning</li>
-										<li><span class="fa fa-refresh"></span> Multiple SDLC Methodologies</li>
 										<li><span class="fa fa-tasks"></span> Project &amp; Program Management</li>
+										<li><span class="fa fa-refresh"></span> Change &amp; Risk Management</li>
 										<li><span class="fa fa-cogs"></span> Process Improvement</li>
-										<li><span class="fa fa-users"></span> Client Management</li>
+										<li><span class="fa fa-users"></span> Requirements, Budget, &amp; Estimation</li>
 										<li><span class="fa fa-usd"></span> Budget &amp; Estimation</li>
-										<li><span class="fa fa-sitemap"></span> Enterprise Architectures</li>
+										<li><span class="fa fa-sitemap"></span> Scrum/Agile SDLCs</li>
+										<li><span class="fa fa-code"></span> JavaScript, jQuery, NodeJS, Angular, Meteor, blah blah blah</li>
 									</ul>
 								</div>
 							</div>
@@ -105,7 +106,7 @@
 						<div class="panel-heading" role="tab" id="headingTwo">
 							<h4 class="panel-title">
 								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-									 	<div class="col-xs-9 text-left">Technology &amp; Development Manager <small>HDR, Inc.</small></div>
+									 	<div class="col-xs-9 text-left">Software Development Manager <small>HDR, Inc.</small></div>
 										<div class="col-xs-3 text-right">4/2010 - Present</div>
 								  </a>
 								</h4>
@@ -115,17 +116,17 @@
 								<div class="col-sm-6">
 									<h5><strong>RESPONSIBILITIES</strong></h5>
 									<span class="fa fa-users big pull-left"></span>
-									<p>Manage budget, resources, and staff, in-house and outsourced, to ensure delivery of both national service portfolio and custom developed technology implementations. Develop strategic and tactical plans for technology initiatives. Oversee operations for technology consulting group. Lead a team of multi-platform developers in the development of custom technology solutions. Communicate with potential clients to identify business needs and evaluate appropriate technology solutions. Plan, direct, and monitor all aspects of large multi-discipline projects with high degree of technical complexity. Responsible for multiple concurrent technology projects for a broad range of clients and agencies. Develop and maintain team budgets and resource allocations across all projects. Provide guidance on technology policy and perform assessments to enhance operations and standardize services. Possess extensive understanding in the areas of application development frameworks, development methodologies, and application design.
+									<p>MManage staff, in-house and outsourced, organized as both agile and traditional, delivering an SaaS service portfolio and managing projects for developing custom business solutions. Oversee operations for consulting group, leading a team of multi-platform developers. Communicate with potential clients to identify business needs and evaluate appropriate applications of technology. Plan, direct, and monitor all aspects of large multi-discipline projects with high degree of technical complexity. Responsible for multiple concurrent projects for a broad range of clients. Develop and maintain team budgets and resource allocations across all projects.  Provide guidance on strategic technology policy and perform assessments to enhance operations.
 									</p>
 								</div>
 								<div class="col-sm-6">
 									<h5><strong>ACCOMPLISHMENTS</strong></h5>
 									<ul>
-										<li><span class="fa fa-circle"></span> Led the development of a national quality program for development and delivery of custom technology solutions.</li>
-										<li><span class="fa fa-circle"></span> Led the development of an interactive map-based logistical preparedness application for the Helix Well Containment Group that enables the automation of response plans for oil spills in the Gulf region.</li>
-										<li><span class="fa fa-circle"></span> Managed the development of an SaaS real property management solution for the Customs and Border Protection division of the U.S. Department of Homeland Security.</li>
-										<li><span class="fa fa-circle"></span> Spearheaded the design of a suite of tools for managing data, quality assurance, and public outreach, within the goals of the Oregon Department of Transportation’s (ODOT) Wireless Interoperability Network.</li>
-										<li><span class="fa fa-circle"></span> Managed the implementation of a CMS based application that captured base planning, maintenance, and compliance information for the United States Air Force Reserve Command.</li>
+										<li><span class="fa fa-circle"></span> Led the development of a public outreach comment collection template, deployed as a mobile-first SaaS web application that allowed collection of custom data within hours. Usage of the template resulted in a 90% decrease in ramp-up costs for comment collection services.</li>
+										<li><span class="fa fa-circle"></span> Led the development of an interactive map-based logistical preparedness application for an oil-spill containment group that enables the automation of response plans. The application provides first responders a platform to organize required inventory quicker, resulting in overall time savings of several days for spill events.</li>
+										<li><span class="fa fa-circle"></span> Managed the development of an SaaS real property management solution for the Customs and Border Protection division of the U.S. Department of Homeland Security that saved hundreds of hours of integration time by providing templates for an internal asset management solution.</li>
+										<li><span class="fa fa-circle"></span> Optimized the data management and quality assurance processes for legislative reporting within the Oregon Department of Transportation’s (ODOT) State Radio Project, resulting in a 50% reduction in turnaround costs for monthly deliverables, saving the agency hundreds of thousands of dollars over the course of the program.</li>
+										<li><span class="fa fa-circle"></span> Managed the development of a GIS-based ledger tool for environmental mitigation banking that allows agencies to record mitigation activities. The tool was turned into a template that can be deployed with a very short turnaround</li>
 									</ul>
 								</div>
 							</div>
@@ -135,7 +136,7 @@
 						<div class="panel-heading" role="tab" id="headingThree">
 							<h4 class="panel-title">
 								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-									 	<div class="col-xs-9 text-left">Project Manager / Business Analyst <small>HDR, Inc.</small></div>
+									 	<div class="col-xs-9 text-left">Project Manager <small>HDR, Inc.</small></div>
 										<div class="col-xs-3 text-right">4/2009 - 4/2010</div>									 
 								  </a>
 								</h4>
@@ -145,16 +146,15 @@
 								<div class="col-sm-6">
 									<h5><strong>RESPONSIBILITIES</strong></h5>
 									<span class="fa fa-cogs big pull-left"></span><span class="fa fa-tasks" style="float:left;font-size:4em;margin-right:10px;"></span>
-									<p>Communicate with potential clients to identify business needs and evaluate appropriate technology solutions. Maintain stewardship of the client business needs and challenges while representing the team capabilities. Plan, direct, and monitor all aspects of large multi-discipline projects with high degree of technical complexity. Responsible for multiple concurrent technology projects for a broad range of clients and agencies. Develop and maintain team budgets and resource allocations across all projects. Possess extensive understanding in the areas of application development frameworks, development methodologies, and application design.
-									</p>
+									<p>Act as the product owner, communicating with clients to identify business needs and evaluate appropriate solutions. Maintain stewardship of the client business needs and challenges. Plan, direct, and monitor all aspects of large multi-discipline projects, agile and non-, with high degree of technical complexity. Responsible for multiple concurrent projects for a broad range of clients and agencies. Develop and maintain team budgets and resource allocations across all projects.</p>
 								</div>
 								<div class="col-sm-6">
 									<h5><strong>ACCOMPLISHMENTS</strong></h5>
 									<ul>
-										<li><span class="fa fa-circle"></span> Introduced agile methodologies into team practices resulting in faster project turnaround and a higher degree of satisfaction in client engagements.</li>
-										<li><span class="fa fa-circle"></span> Virtualized development resources to cloud-based solution resulting in decreased infrastructure costs, increased scalability, and expanding potential market penetration.</li>
-										<li><span class="fa fa-circle"></span> Implemented comprehensive defect tracking and source control systems that resulted in faster turnaround of issues and greater control of product development cycle.</li>
-										<li><span class="fa fa-circle"></span> Established the base transparency model for a custom centralized reporting application compliant with the Federal Office of Management and Budget (OMB) guidelines for the American Recovery and Reinvestment Act (ARRA) that includes a dynamic ad-hoc reporting GIS services to visualize the path of stimulus funds.</li>
+										<li><span class="fa fa-circle"></span> Introduced agile methodologies into team practices resulting in 50% faster project turnaround and a higher degree of satisfaction in client engagements.</li>
+										<li><span class="fa fa-circle"></span> Virtualized development resources to cloud-based solution resulting in a 50% decrease in infrastructure costs, increased scalability, and expanding potential market penetration.</li>
+										<li><span class="fa fa-circle"></span> Implemented comprehensive defect tracking and source control systems that resulted in 100% faster turnaround of issues and greater control of product development cycle.</li>
+										<li><span class="fa fa-circle"></span> Established the base transparency model for a custom centralized reporting application compliant with the Federal Office of Management and Budget (OMB) guidelines for the American Recovery and Reinvestment Act (ARRA) that includes a dynamic ad-hoc reporting GIS services to visualize the path of stimulus funds. The central reporting platform was utilized by the State of Oregon for the entirety of the ARRA reporting requirements.</li>
 									</ul>
 								</div>
 							</div>
@@ -174,15 +174,15 @@
 								<div class="col-sm-6">
 									<h5><strong>RESPONSIBILITIES</strong></h5>
 									<span class="fa fa-sitemap big pull-left"></span>
-									<p>Responsible for enterprise technical operational strategy. Establish and implement policies for resource usage. Develop standards and best practices for systems architecture, implementation, and process. Design, capture, and analyze performance metrics for demand, capacity, and overall infrastructure utilization. Advise executive management on the benefits and risks of technology implementation and change. Work with clients, vendors, and technical consultants both internally and externally. Conducts reviews of the enterprise environment to proactively address potential problem areas.
-									</p>
+									<p>Responsible for enterprise technical operational strategy. Establish and implement policies for resource usage. Develop standards and best practices for systems architecture, implementation, and process. Design, capture, and analyze performance metrics for demand, capacity, and overall infrastructure utilization. Advise executive management on the benefits and risks of technology implementation and change. Work with clients, vendors, and technical consultants both internally and externally. Conducts reviews of the enterprise environment to proactively address potential problem areas.</p>
 								</div>
 								<div class="col-sm-6">
 									<h5><strong>ACCOMPLISHMENTS</strong></h5>
 									<ul>
+										<li><span class="fa fa-circle"></span> Co-developed and implemented enterprise level network topology for spin-off joint venture company. </li>
 										<li><span class="fa fa-circle"></span> Developed multiple policies to direct technology service usage throughout the enterprise.</li>
 										<li><span class="fa fa-circle"></span> Implemented numerous measures to decrease risk of loss due to unlicensed software.</li>
-										<li><span class="fa fa-circle"></span> Introduced security measures to reduce potential cyber threat.</li>
+                                        <li><span class="fa fa-circle"></span> Introduced security measures to reduce potential cyber threat.</li>
 									</ul>
 								</div>
 							</div>
