--- a/public/tweets.html
+++ b/public/tweets.html
@@ -61,14 +61,13 @@
 
 				<!--Content-->
 				<h1 style="color: #ddd;">Tweet Generator</h1>
-				<div class="panel panel-body">
 					<div class="col-sm-12 panel panel-body">
 						<p>I played around with grabbing public tweets using them to build a Markov-based tweetbot. It mostly generates gibberish, but it was kind of fun.</p>
+						<p>Still working on a feature to allow people to enter a different twitter user or hashtag and generate these on the fly.</p>
 						<p>Current Target: <a href="https://twitter.com/realDonaldTrump">@realDonaldTrump</a></p>
 						<h2 id="generated_title"></h2>
 						<button id="generate" class="btn">Generate Tweet</button>
 					</div>
-				</div>
 				<!--End Content-->
 
 			</div>
