--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
 								</li>
 								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
 								</li>
-								<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>
-								</li>
+								<!--<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>-->
+								<!--</li>-->
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>								
 								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Bot!</a>
@@ -60,7 +60,10 @@
 				<!--Content-->
 				<h1 style="color: #ddd;">I Have No Idea What I'm Doing</h1>
 				<div class="panel panel-body">
-					<p>This is just a place for me to practice my meager skills. Please don't look too deep, I am not a developer by trade.</p>
+					<p>PERSON: Hey Caleb, this website sucks/is broken.</p>
+					<p>CALEB: I know. This was just meant to be a place for me to practice my meager skills, but I've been super busy for a long time. Please don't look too deep.</p>
+					<p>PERSON: ...but....sucks!</p>
+					<p>CALEB: Give it a rest. I'm working on redeveloping everything and finding a new host. Maybe in a couple weeks I'll have something deployed.</p>
 					<p>Check me out on:</p>
 					<ul>
 						<li><a href="https://github.com/kirishoru"><i class="fa fa-github-square"></i> GitHub</a>
